Fix overflow issue for tags page

--- a/app/assets/stylesheets/preact/onboarding-modal.scss
+++ b/app/assets/stylesheets/preact/onboarding-modal.scss
@@ -158,7 +158,7 @@
 
   .scroll {
     max-height: 200px;
-    overflow: scroll;
+    overflow: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
